# glitch-web-app

./: README.md  dash_server.py  fastapi_server.py  flask_server.py  package.json  pyproject.toml
.github/workflows/: glitch-deploy.yaml
src/glitch_web_app/: __main__.py  fastapi_server.py  flask_server.py
