[project]
name = "glitch_web_app"
version = "0.1.0"
description = "Template web app for deployment on glitch.com"
authors = [
    {name = "Ethan Ho", email = "53266718+ethho@users.noreply.github.com"},
]
readme = "README.md"
dependencies = [
	"typer>=0.12.3",
	"fastapi",
	"flask",
	"gunicorn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
